--- a/caravan1/caravan1.css
+++ b/caravan1/caravan1.css
@@ -1,17 +1,60 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="box.css">
-  <title>BOX</title>
-</head>
-<body>
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  <div class="box1">
-    <div class="box2"></div>
-</div>
+.header {
+  width: 100%;
+  height: 120px;
+  background-color: red;
+}
 
-</body>
-</html>
+.header-top {
+  width: 100%;
+  height: 70px;
+  background-color: hotpink;
+}
+
+.header-bottom {
+  width: 100%;
+  height: 50px;
+  background-color: pink;
+}
+
+.main-visual {
+  width: 100%;
+  height: 300px;
+  background-color: orange;
+}
+
+.main-visual-content {
+  width: 350px;
+  height: 300px;
+  background-color: gold;
+}
+
+.main {
+  width: 840px;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.blog {
+  width: 600px;
+  height: 1400px;
+  background-color: limegreen;
+}
+
+.sidebar {
+  width: 240px;
+  height: 1400px;
+  background-color: palegreen;
+}
+
+.footer {
+  width: 100%;
+  height: 120px;
+  background-color: blue;
+}
