--- a/caravan1/style.css
+++ b/caravan1/style.css
@@ -115,6 +115,22 @@ main {
   font-size: 11px;
 }
 
+.pagination {
+  text-align: center;
+  padding-top: 50px;
+}
+
+.pagination p {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  margin: 0.5px;
+  color: #fff;
+  background-color: #acabab;
+  border-radius: 3px;
+  line-height: 30px;
+}
+
 .sidebar {
   width: 230px;
 }
@@ -143,9 +159,17 @@ main {
   border: none;
 }
 
-.instagram.sidebar-contents {
+.instagram .sidebar-contents {
   display: flex;
   flex-wrap: wrap;
+}
+
+.instagram-box {
+  width: 110px;
+  padding-top: 110px;
+  background-size: cover;
+  background-position: center;
+  margin-bottom: 10px;
 }
 
 .instagram-box:nth-child(odd) {
